# habit-tracker

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
apps/api/: Cargo.toml  README.md  project.json
apps/api/src/: error.rs  habit.rs  handler.rs  lib.rs  main.rs  route.rs  service.rs  storage.rs
apps/api/tests/: api.rs
apps/web/: .swcrc  index.d.ts  next.config.js  package.json  tsconfig.json  tsconfig.spec.json  vite.config.mts
apps/web-e2e/: package.json
apps/web/src/app/: global.css  layout.tsx  page.tsx
apps/web/src/app/habits/: page.tsx
apps/web/src/lib/: client.ts
apps/web/src/services/: habits.ts
src/: command.rs  habit.rs  main.rs  service.rs  storage.rs
tests/: api.rs
