[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.43", features = ["serde"]}
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"
