[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = {version = "0.4.43", features = ["serde"]}
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
